@@ -11,10 +11,15 @@
  border-radius:5px!important;
 }
 
-.np-image, .np-image .np-cover,
-.np-no-meta-img,
-.np-image-landscape, .np-image-landscape .np-cover {
- border-radius:14px!important;
+.np-image, .np-image .np-cover, .np-no-meta-img, .np-image-landscape, .np-image-landscape .np-cover {
+ border-radius:max(6px, min(14px, 7%)) !important;
+}
+
+/* For old browsers that dont support min() */
+@supports not (width: min(10px, 5vw)) {
+ .np-image, .np-image .np-cover, .np-no-meta-img, .np-image-landscape, .np-image-landscape .np-cover {
+  border-radius:14px!important;
+ }
 }
 
 .np-cover {
